// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/ProgressBar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="sc-fXoxut fVeoGG sc-Fyfyc hNOTjr"
      color="#fff"
    >
      <div
        class="sc-jGVbCA jWbjBD"
      >
        10
        %
      </div>
      <div
        class="sc-dWdcrH eJmBql"
        style="width: 10%;"
      >
        <div
          class="sc-bQdQlF kUjWPQ"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Different Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="sc-fXoxut fVeoGG sc-Fyfyc hNOTjr"
      color="#fff"
      type="danger"
    >
      <div
        class="sc-jGVbCA jWbjBD"
      >
        10
        %
      </div>
      <div
        class="sc-dWdcrH kShCtr"
        style="width: 10%;"
      >
        <div
          class="sc-bQdQlF kUjWPQ"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="sc-fXoxut hsTJaj sc-Fyfyc hNOTjr"
      color="#fff"
    >
      <div
        class="sc-jGVbCA jWbjBD"
      >
        10
        %
      </div>
      <div
        class="sc-dWdcrH eJmBql"
        style="width: 10%;"
      >
        <div
          class="sc-bQdQlF kUjWPQ"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;
